--- a/index.html
+++ b/index.html
@@ -3,63 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Score Tracker</title>
+    <title>Game Boards</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="teamNames">
-        <div class="input-container">
-            <input type="text" id="teamOne" placeholder="Team/Player One" autocomplete="off">
-            <input type="text" id="teamTwo" placeholder="Team/Player Two" autocomplete="off">
-            <div class="dropdown">
-                <input type="text" id="categoryInput" placeholder="Select Category" readonly>
-                <button id="categoryButton">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <polyline points="6 9 12 15 18 9"></polyline>
-                    </svg>
-                </button>
-                <ul id="categoryList" class="dropdown-content">
-                    <li>All</li>
-                    <li>FIFA</li>
-                    <li>Cards</li>
-                    <li>Chess</li>
-                    <li>Board Games</li>
-                </ul>
+    <div id="gameboardContainer">
+        <h1>Game Boards</h1>
+
+        <div id="createNewSection">
+            <span>Create New</span>
+            <a href="gameboard.html" class="aqua-button">+</a>
+        </div>
+
+        <h2>Past Boards</h2>
+
+        <div id="categoryTabs">
+            <div class="tab-wrapper">
+                <!-- Category tabs will be dynamically added here -->
             </div>
-            <button id="buttonSubmit">Submit</button>
+        </div>
+
+        <div id="gameList">
+            <!-- Game items will be dynamically added here -->
         </div>
     </div>
 
-    <div id="appContainer" style="display: none;">
-        <div id="firstHalfContainer">
-            <div id="firstPlayerContainer">
-                <div id="firstPlayer"></div>
-                <div id="scoreOne" class="score-button"></div>
-            </div>
-            <div id="buttonDivOne"></div>
-        </div>
-
-        <div id="resetDiv">
-            <button id="resetButton">Reset</button>
-        </div>
-
-        <div id="secondHalfContainer">
-            <div id="buttonDivTwo"></div>
-            <div id="secondPlayerContainer">
-                <div id="secondPlayer"></div>
-                <div id="scoreTwo" class="score-button"></div>
-            </div>
-        </div>
-    </div>
-
-    <div id="noteModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <textarea id="noteText" placeholder="Enter your note here..."></textarea>
-            <button id="saveNote">Save Note</button>
-        </div>
-    </div>
-
-    <script type="module" src="main.js"></script>
+    <script src="gameboard.js"></script>
 </body>
 </html>
