trying to impliment, flip anmated logo

--- a/gameboard.html
+++ b/gameboard.html
@@ -10,9 +10,9 @@
     <div id="backArrow">
         <a href="index.html">←</a>
     </div>
-
     <div id="teamNames">
         <div>
+            <div id="flipContainer" style="width: 100px; height: 100px;"></div>
             <div id="categoryDropdown" class="dropdown">
                 <input type="text" id="categoryInput" placeholder="Select or add a category" readonly>
                 <button id="categoryButton">
