--- a/gameboard.html
+++ b/gameboard.html
@@ -12,7 +12,7 @@
     </div>
     <div id="teamNames">
         <div>
-            <div id="flipContainer" style="width: 100px; height: 100px;"></div>
+            <div id="flipContainer"></div>
             <div id="categoryDropdown" class="dropdown">
                 <input type="text" id="categoryInput" placeholder="Select or add a category" readonly>
                 <button id="categoryButton">
