back arrow change

--- a/gameboard.html
+++ b/gameboard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="backArrow">
-        <a href="index.html">←</a>
+        <a href="index.html"><</a>
     </div>
     <div id="teamNames">
         <div>
