--- a/stats.html
+++ b/stats.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="backArrow">
-        <a href="javascript:void(0);" id="backToGame">←</a>
+        <a href="javascript:void(0);" id="backToGame"><</a>
     </div>
     <div id="statsContainer">
         <h1>Game Stats</h1>
