reverted back from favicon for now

--- a/stats.html
+++ b/stats.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    
     <title>Game Stats</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stats.css">
 </head>
 <body>
     <div id="backArrow">
-        <a href="javascript:void(0);" id="backToGame"><i class='fas fa-chevron-left'></i>
-        </a>
+        <a href="javascript:void(0);" id="backToGame"><</a>
     </div>
     <div id="statsContainer">
         <h1>Game Stats</h1>
