--- a/stats.html
+++ b/stats.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <title>Game Stats</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stats.css">
 </head>
 <body>
     <div id="backArrow">
-        <a href="javascript:void(0);" id="backToGame"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="javascript:void(0);" id="backToGame"><</a>
     </div>
     <div id="statsContainer">
         <h1>Game Stats</h1>
