--- a/gameboard.html
+++ b/gameboard.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    
+    <script src="https://kit.fontawesome.com/5c6900aa38.js" crossorigin="anonymous"></script>
     <title>Game Board</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="backArrow">
-        <a href="index.html"><</a>
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
     </div>
     <div id="teamNames">
         <div>
