final working version

--- a/gameboard.html
+++ b/gameboard.html
@@ -50,6 +50,12 @@
                 <div id="scoreTwo" class="score-button"></div>
                 <button id="refreshTwo" class="refresh-button">Refresh</button>
             </div>
+            <div>
+                <a id="statsID"></a>
+            </div>
+            <div>
+                <p id="underlined-text">Double tap buttons to save note</p>
+            </div>
         </div>
     </div>
 
