--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="gameboard.html" class="aqua-button">+</a>
         </div>
 
-        <h2>Past Boards</h2>
+        <h2 id="pastBoards">Past Boards</h2>
 
         <div id="categoryTabs">
             <div class="tab-wrapper">
