--- a/stats.html
+++ b/stats.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="stats.css">
 </head>
 <body>
-    <div id="backArrow">
-        <a href="javascript:void(0);" id="backToGame"><i class="fa-solid fa-arrow-left"></i></a>
-    </div>
+
     <div id="statsContainer">
-        <h1>Game Stats</h1>
+        <div id="topStats">        
+            <a href="javascript:void(0);" id="backToGame"><i class="fa-solid fa-arrow-left"></i></a> 
+            <h1 style="margin-left: 20px;">Game Stats</h1></div>
+
         <div id="gameInfo"></div>
         <div id="teamOneStats">
             <h2></h2>
