--- a/gameboard.html
+++ b/gameboard.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div id="backArrow">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <h1 id="gameIdHeader" style="margin-left: 20px;"></h1>
     </div>
     <div id="teamNames">
         <div>
@@ -68,5 +70,6 @@
     </div>
 
     <script type="module" src="main.js"></script>
+    
 </body>
 </html>
