--- a/stats.html
+++ b/stats.html
@@ -13,7 +13,8 @@
     <div id="statsContainer">
         <div id="topStats">        
             <a href="javascript:void(0);" id="backToGame"><i class="fa-solid fa-arrow-left"></i></a> 
-            <h1 style="margin-left: 20px;">Game Stats</h1></div>
+            <h1 style="margin-left: 20px;">Game Stats</h1>
+        </div>
 
         <div id="gameInfo"></div>
         <div id="teamOneStats">
